--- a/css/index.css
+++ b/css/index.css
@@ -24,3 +24,12 @@ body{
     position: relative ;
     top : 180px  ;
 }
+
+.modal-Post {
+    background-color: #fefefe;
+    margin: 2% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2),rgba(0,0,0,0.2),rgba(0,0,0,0.),
+  }
